Set up new footer area + interior pgs

--- a/wp-content/themes/rrtr/assets/scss/base/_global.scss
+++ b/wp-content/themes/rrtr/assets/scss/base/_global.scss
@@ -8,6 +8,7 @@ $brand-accent: #9fa1a3; //dark grey from logo
 // typical colors
 $white: #fff;
 $dark: #444;
+$border: #EAEAEA;
 
 // sizes
 $rounded: 4px;
