--- a/wp-content/themes/rrtr/assets/scss/base/_layout.scss
+++ b/wp-content/themes/rrtr/assets/scss/base/_layout.scss
@@ -6,19 +6,19 @@ input,
 select,
 textarea {
 	color: #666666;
-	font: 16px 'Lato', sans-serif;
+	font: $base;
 	line-height: 20px;
 	word-wrap: break-word;
 }
 body {
-	background: #eaeaea;
+	background: $border;
 }
 /* Headings */
 h1, h2, h3, h4, h5, h6 { 
 	padding-bottom: 18px;
-	color: #222222;
+	color: $dark;
 	font-weight: normal;
-	font-family: 'Lato', sans-serif;
+	font-family: $base;
 }
 h1 { font-size: 28px; line-height: 34px; }
 h2 { font-size: 26px; line-height: 32px; }
@@ -27,7 +27,7 @@ h4 { font-size: 22px; line-height: 28px; }
 h5 { font-size: 20px; line-height: 26px; }
 h6 { font-size: 18px; line-height: 24px; }
 hr {
-	border-color: #EAEAEA;
+	border-color: $border;
 	border-style: solid none none;
 	border-width: 1px 0 0;
 	height: 0;
@@ -52,7 +52,7 @@ pre {
 	margin-bottom: 20px;
 	overflow: auto;
 	padding: 20px;	
-	border: 1px solid #EAEAEA;
+	border: 1px solid $border;
 }
 pre, code, kbd, var, samp, tt {
 	font-family: $code;
@@ -122,7 +122,7 @@ blockquote {
 	font-style: italic;
 	font-weight: normal;
 	padding: 20px;	
-	border: 1px solid #EAEAEA;
+	border: 1px solid $border;
 	border-left: 3px solid #0FBE7C;
 	margin-bottom: 20px;
 }
@@ -156,7 +156,7 @@ input[type="email"],
 input[type="password"], 
 textarea {
 	padding: 1%;
-	border: 1px solid #EAEAEA;
+	border: 1px solid $border;
 	line-height: 20px;
 	width: 98%;
 	margin: 0 0 30px;
@@ -170,7 +170,7 @@ input[type="email"]:focus,
 input[type="search"]:focus, 
 input[type="password"]:focus, 
 textarea:focus {
-	border: 1px solid #EAEAEA;
+	border: 1px solid $border;
 }
 input.s {
 	width: 60%;
@@ -179,12 +179,12 @@ input.s {
 	color: #666666;
 	background-color: #FFFFFF;
 	margin: 0;
-	border: 1px solid #EAEAEA;
+	border: 1px solid $border;
 	cursor: pointer;
 }
 input.s:focus {
 	padding-left: 10px;
-	border-color: #EAEAEA;
+	border-color: $border;
 	text-indent: 0;
 }
 .spacious-button,
@@ -221,7 +221,7 @@ button:hover {
    color: #666666;
    padding: 5px 25px;
 	cursor: pointer;
-   border: 1px solid #EAEAEA;
+   border: 1px solid $border;
    font-size: 16px;
 }
 .previous a:hover,
@@ -239,7 +239,7 @@ input[type="submit"]:active {
 /* =LINKS
 ----------------------------------------------- */
 a {
-	color: #0FBE7C;
+	color: $brand-main;
 	text-decoration: none;
 }
 a:focus, a:active, a:hover {
@@ -373,12 +373,17 @@ body {
 .wide-978 .inner-wrap {
 	max-width: 978px;
 }
+.center, .center p{
+	text-align: center!important;
+	margin: 0 auto;
+	max-width: 100%;
+}
 
 
 /* =PAGE HEADER TITLE 
 ----------------------------------------------- */
 .header-post-title-container {
-	border-bottom: 1px solid #EAEAEA;
+	border-bottom: 1px solid $border;
 	padding: 20px 0;
 	box-shadow: 0 0 30px rgba(0, 0, 0, 0.05) inset;
 }
@@ -558,8 +563,8 @@ body {
 /* =META 
 ----------------------------------------------- */
 .meta {
-	border-bottom: 1px dashed #EAEAEA;
-	border-top: 1px dashed #EAEAEA;
+	border-bottom: 1px dashed $border;
+	border-top: 1px dashed $border;
 	padding: 5px;
 	font-size: 15px;
 }
@@ -568,7 +573,7 @@ body {
 	padding-left: 0 !important;
 }
 .meta li {
-	border-left: 1px solid #EAEAEA;
+	border-left: 1px solid $border;
 	float: left;
 	padding: 0 6px 0 6px !important;
 	border-bottom: none !important;
@@ -607,7 +612,7 @@ body {
 }
 .pagination span {
 	padding: 2px 5px;
-	border: 1px solid #EAEAEA;
+	border: 1px solid $border;
 	background-color: #0FBE7C;	
 	color: #FFFFFF;
 }
@@ -647,7 +652,7 @@ body {
 	padding: 20px;
 	border-width: 2px 1px 1px 1px;
 	border-style: solid dashed dashed dashed;
-	border-color: #0FBE7C #EAEAEA #EAEAEA #EAEAEA;	
+	border-color: #0FBE7C $border $border $border;	
 	font-style: italic;
 	margin-bottom: 15px; 
 	display: block;
@@ -675,7 +680,7 @@ body {
 .call-to-action-content-wrapper {
 	border-width: 1px 1px 1px 3px;
 	border-style: dashed dashed dashed solid;
-	border-color: #EAEAEA #EAEAEA #EAEAEA #0FBE7C;
+	border-color: $border $border $border #0FBE7C;
 	padding: 20px 3.85878489% 20px 3.69458128%;
    background-color: #F8F8F8;
 }
@@ -846,7 +851,7 @@ body {
 .comment-content {
 	padding: 2rem;
 	background-color: #F8F8F8;
-	border: 1px solid #EAEAEA;
+	border: 1px solid $border;
 }
 .comment {
 	margin-bottom: 20px;
@@ -892,7 +897,7 @@ body {
    color: #666666;
    padding: 5px 25px;
 	cursor: pointer;
-   border: 1px solid #EAEAEA;
+   border: 1px solid $border;
    font-size: 16px;
 }
 .nav-previous a:hover,
@@ -954,7 +959,7 @@ body {
 ----------------------------------------------- */
 #secondary .widget ul li, #colophon .widget ul li {
 	line-height: 1.5;
-	border-bottom: 1px solid #EAEAEA;
+	border-bottom: 1px solid $border;
 	padding: 5px 0;
 }
 #colophon .widget ul li {
@@ -1032,7 +1037,7 @@ body {
 ----------------------------------------------- */
 .footer-widgets-wrapper {
 	background-color: $brand-main;
-	border-top: 1px solid #EAEAEA;
+	border-top: 1px solid $border;
 }
 .footer-widgets-area {
 	padding-top: 30px;
@@ -1063,6 +1068,7 @@ body {
 #colophon, #colophon p {
 	font-size: 14px;
 	line-height: 18px;
+	text-align: left;
 }
 
 /* =FOOTER SOCKET AREA 
@@ -1072,6 +1078,11 @@ body {
 }
 .footer-socket-area {
 	width: 100%;
+}
+.footer-widgets-area{
+	a{
+		color: $white;
+	}
 }
 .footer-socket-wrapper .copyright {
 	color: #666666;
@@ -1219,7 +1230,7 @@ a#scroll-up:hover {
 	padding-left: 4%;
 }
 .post .entry-meta {
-	border: 1px solid #EAEAEA;
+	border: 1px solid $border;
 	font-size: 14px;
 	color: #666666;
 	font-family: 'Lato', sans-serif;
@@ -1281,7 +1292,7 @@ a#scroll-up:hover {
 	margin: 30px 0;
 }
 .single #content .tags a {
-	border: 1px solid #EAEAEA;
+	border: 1px solid $border;
 	padding: 3px 5px;
 	border-radius: 3px;
 	color: #666666;
