Quote form added + slight restructuring

--- a/wp-content/themes/rrtr/assets/scss/theme.scss
+++ b/wp-content/themes/rrtr/assets/scss/theme.scss
@@ -9,6 +9,7 @@
 @import "base/reset";
 @import "base/header";
 @import "base/layout";
+@import "base/page"; //interior pg (sidebar + pg headers + indiv. pg styles/overrides)
 @import "base/form";
 
 // Partials 
