--- a/wp-content/themes/rrtr/assets/scss/theme.scss
+++ b/wp-content/themes/rrtr/assets/scss/theme.scss
@@ -8,6 +8,7 @@
 @import "base/global"; //global variables & mixins
 @import "base/reset";
 @import "base/header";
+@import "base/footer";
 @import "base/layout";
 @import "base/page"; //interior pg (sidebar + pg headers + indiv. pg styles/overrides)
 @import "base/form";
