--- a/wp-content/themes/rrtr/assets/scss/base/_form.scss
+++ b/wp-content/themes/rrtr/assets/scss/base/_form.scss
@@ -11,6 +11,7 @@
 	height: auto;
 	max-width: 100%;
 	margin: 0 auto;
+	margin-bottom: 30px;
 	background-color: lighten($brand-main,5%);
 	overflow: hidden;
 }
