--- a/wp-content/themes/rrtr/assets/scss/base/_page.scss
+++ b/wp-content/themes/rrtr/assets/scss/base/_page.scss
@@ -187,3 +187,27 @@ ul.sidebar-menu{
 	width: 50%;
 }
 
+
+//Content Styling//
+
+.entry-content {
+	h1 {
+		color: lighten($brand-main,5%);
+	}	
+	
+	ol {
+		list-style-type: decimal;
+		margin-bottom: 15px;
+	}
+	
+	ul {
+		list-style-type: circle;
+		margin-bottom: 15px;
+	}
+}
+
+
+
+
+
+
