--- a/wp-content/themes/rrtr/assets/scss/base/_form.scss
+++ b/wp-content/themes/rrtr/assets/scss/base/_form.scss
@@ -105,7 +105,7 @@
 
 }
 
-.form-subject {
+.form-select {
 	line-height: 1;
 	width: 100%;
 	text-align: left;
@@ -122,6 +122,14 @@
 		color: #666666;
 		padding: 2%;
 	}
+}
+
+.form-subject {
+	
+}
+
+.form-referral {
+	
 }
 
 .form-comment {
@@ -160,13 +168,25 @@
 
 div.wpcf7-response-output {
 	line-height: 1;
-	color: white;
+	padding: 4%;
+
+	&.wpcf7-validation-errors {
+		color: red;
+	}
+	
+	&.wpcf7-mail-sent-ok {
+		color: green;
+	}
 }
+
 
 span.wpcf7-not-valid-tip {
 	color: red;
+	position: absolute;
+	top: -12px;
 	font-size: 12px;
 	line-height: 1;
+	position: relative;
 	text-align: left;
 }
 
