--- a/wp-content/themes/rrtr/assets/scss/base/_page.scss
+++ b/wp-content/themes/rrtr/assets/scss/base/_page.scss
@@ -191,6 +191,7 @@ ul.sidebar-menu{
 //Content Styling//
 
 .entry-content {
+	
 	h1 {
 		color: lighten($brand-main,5%);
 	}	
@@ -203,6 +204,16 @@ ul.sidebar-menu{
 	ul {
 		list-style-type: circle;
 		margin-bottom: 15px;
+	}
+	
+	.form-wrap {
+		width: 100%;
+	}
+	
+	.form {
+		max-width: 400px;
+		min-width: 200px;
+		margin: 0 auto;
 	}
 }
 
