fixing homepage form + interior
- final version before commit to show client on Linode server

--- a/wp-content/themes/rrtr/assets/scss/base/_form.scss
+++ b/wp-content/themes/rrtr/assets/scss/base/_form.scss
@@ -185,6 +185,10 @@ div.wpcf7-response-output {
 	&.wpcf7-mail-sent-ok {
 		color: green;
 	}
+	&.wpcf7-display-none{
+		display: none;
+	}
+	
 }
 
 
