--- a/wp-content/themes/rrtr/assets/scss/partials/_media.scss
+++ b/wp-content/themes/rrtr/assets/scss/partials/_media.scss
@@ -38,13 +38,16 @@ $phone-landscape: 480px;
 /* Breakpoint description - below 993, above 769 (fix nav sizing issue on large tablets)
 -------------------------------------------------------------- */
 @media (max-width:993px) and (min-width:769px) {
-	
 	.main-navigation ul li{
 		padding: 0 0 0 16px;
 		a {
 			font-size: 12px;
 		}
 	}
+	.inner-wrap{
+		width: 96%;
+	}
+	
 }
 
 
@@ -94,7 +97,12 @@ $phone-landscape: 480px;
 @media screen and (max-width: $phone-landscape) { 
 	#main.clearfix.forpage {
 		margin-top: -120px;
-	}	
+	}
+	#final-call {
+		h5, h5 b{
+			font-size: 20px;
+		}
+	}
 }
 
 /* Breakpoint description - below 320 (portrait)
@@ -102,6 +110,8 @@ $phone-landscape: 480px;
 @media screen and (max-width: $phone-portrait) { 
 
 }
+
+
 
 
 
