--- a/wp-content/themes/rrtr/assets/scss/base/_form.scss
+++ b/wp-content/themes/rrtr/assets/scss/base/_form.scss
@@ -59,7 +59,7 @@
 	
 	input {
 		width: 96%;
-		margin-bottom: 10px;
+		margin: 0 0 10px 0;
 	}
 }
 
@@ -132,12 +132,24 @@
 	}
 }
 
+.form-other {
+	width: 48%;
+	float: right;
+	line-height: 1;
+	display: none;
+	
+	input {
+		width: 96%;
+		margin-bottom: 10px;
+	}
+}
+
 .form-subject {
 	
 }
 
 .form-referral {
-	
+	float: left;
 }
 
 .form-comment {
@@ -145,6 +157,7 @@
 	
 	textarea {
 		margin-bottom: 10px;
+		border-radius: 0;
 		resize: none;
 		
 	}
@@ -167,6 +180,10 @@
 		border-radius: 20px;
 		font-size: 20px;
 		padding: 8px 15px;
+		
+		&:focus {
+			outline: none;
+		}
 	}
 	
 	img.ajax-loader {
