With "Realtors" Call-To-Action

--- a/wp-content/themes/rrtr/assets/scss/base/_header.scss
+++ b/wp-content/themes/rrtr/assets/scss/base/_header.scss
@@ -64,6 +64,10 @@ h1#site-title {
 	border-bottom: 1px solid $border;
 	width: 100%;
 }
+li#phone-number{
+	font-size: 26px;
+	padding-top: 5px;
+}
 
 /* =SEARCH WIDGET 
 ----------------------------------------------- */
