--- a/wp-content/themes/rrtr/assets/scss/base/_page.scss
+++ b/wp-content/themes/rrtr/assets/scss/base/_page.scss
@@ -177,7 +177,10 @@ ul.sidebar-menu{
 	font-size: 16px;
 }
 #secondary a:hover {
-	text-decoration: underline;
+    text-decoration: underline;
+}
+#secondary .widget ul li a {
+    color: #fff;
 }
 .error-404 {
 	padding-bottom: 20px;
